# ivr-lambdas

./: .gitignore  Cargo.lock.copy  Cargo.toml  LICENSE  README.md  flake.nix
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.json.license  docker-compose.yml
authenticate_voter/: Cargo.toml
authenticate_voter/src/: main.rs
authenticate_voter/test/: test_data_1.json  test_data_2.json
authenticate_voter/test/mock_backend/: authenticate_voter.response_200.json  authentication_success.json
deployment-skel/: authenticate_voter.env_vars  deploy.sh  record_vote.env_vars
doc/: README.md  activity-diagram-authentication-block.puml  activity-diagram-birds-eye-view.puml  activity-diagram-casting-block.puml  activity-diagram-voting-block.puml
record_vote/: Cargo.toml  record_vote
record_vote/src/: main.rs
record_vote/test/: test_data_1.json
