# SPDX-FileCopyrightText: 2022 Eduardo Robles <edu@sequentech.io>
#
# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "record_vote"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { version = "0.6.3", default-features = false, features = ["connect"] }
lambda_runtime = "0.6.1"
oxhttp = { version = "0.1.5", features = ["rustls"] }
serde_json = "1.0.85"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
strand = { git = "https://github.com/sequentech/strand", rev = "130c3a412823f53e903b79cc76b56412b2a7b5ba" }
hex = "0.4.3"
serde = "1.0.145"
num-bigint = { version = "0.4", features = ["rand"] }
chrono = "0.4.22"


